# Tile-Generator

./: .gitignore  CHANGES.md  CMakeLists.txt  DEPENDENCIES.md  README.md  WATER.md  constants.py  features.json  features_z8-16_v4.json  fgb_viewer.py  generate_tiles.sh  geo_utils.py  nav_viewer.py  osm_handlers.py  pbf_to_fgb.py  pbf_to_nav.py  tile_generator.py  tile_generator_opt.py  tile_generator_optimizations.md  tile_optimization_roadmap.md  tile_viewer.py  tile_writer.py
archive/: features_devel.json  tile_viewer_devel.py
cpp_generator/: CMakeLists.txt  README.md
cpp_generator/src/: config_manager.hpp  main.cpp  nav_types.hpp  osmium_handler.hpp  tile_processor.hpp  utils.hpp
debug/: debug_feature_940.py  debug_garonne.py  debug_garonne2.py  debug_nav.py  test_nav_read.py
docs/: bin_tile_format.md  features_json_format.md  route_generator.md  tile_viewer.md
notes/: nibbles_vs_json.txt  pbf_places_scan.txt  pbf_tags_scan.txt  roads_and_ rails.txt  topo_pb_garonne_multipolygones.txt
src/: config_manager.hpp  constants.hpp  graph_builder.hpp  main.cpp  mapped_store.hpp  nav_types.hpp  osmium_handler.hpp  route_main.cpp  shapefile_loader.hpp  tile_processor.hpp  utils.hpp
tests/: test_nav_format.py  test_varint_roundtrip.py
tools/: psram_shim.hpp  test_astar  test_astar.cpp
